# KOPy

./: .gitignore  .travis.yml  README.rst  setup.cfg  setup.py
KOPy/: __init__.py  closures.py  starlist.py  targets.py
KOPy/instruments/: coords.py
KOPy/instruments/osiris/: coords.py  ddf.py  regions.py
KOPy/regions/: __init__.py  base.py  shapes.py
KOPy/tests/: conftest.py  test_closures.py  test_starlist.py  test_targetlist.py
KOPy/tests/data/: bad_starlist.txt  big_starlist.txt  opensUnix150807.txt  small_starlist.txt
dev/: Starlist Testing.ipynb  profile_targetlist.py
docs/: index.rst
docs/KOPy/: closures.rst  index.rst  starlist.rst  targets.rst
examples/OSIRIS-ddf/: README.rst  ddf2reg.py  example.ddf  starlist.txt
examples/UKIRT-FS/: README.rst  ukirtfs_starlist.py
licenses/: LICENSE.rst
